# AC-Coach

./: README.md
AC_Coach/: database.py  main.py  mainwindow.py  pyproject.toml
AC_Coach/app/: coach_service.py  code_judge.py  cpp_runner.py  editor_manager.py  exam_answer_dialog.py  exam_dialog.py  exam_history_dialog.py  exam_manager.py  exam_thread.py  file_manager.py  mistake_card.py  panel_manager.py  problem_controller.py  review_manager.py  review_thread.py
AC_Coach/llm/: __init__.py  llm.py
AC_Coach/ui/: coach_panel_ui.py  form.ui  ui_form.py
