[project]
name = "AC_Coach"

[tool.pyside6-project]
files = [
    "app/coach_service.py",
    "app/code_judge.py",
    "app/cpp_runner.py",
    "app/editor_manager.py",
    "app/exam_answer_dialog.py",
    "app/exam_dialog.py",
    "app/exam_history_dialog.py",
    "app/exam_manager.py",
    "app/exam_thread.py",
    "app/file_manager.py",
    "app/mistake_card.py",
    "app/panel_manager.py",
    "app/problem_controller.py",
    "app/review_manager.py",
    "app/review_thread.py",
    "database.py",
    "main.py",
    "mainwindow.py",
    "ui/coach_panel_ui.py",
    "ui/form.ui",
]
